# Ongoing-Study

./: .editorconfig  .gitattributes  .gitignore  README.md
AutoHotkey/: MyWife.ahk  awesome-autohotkey.md  locate_sermouse_sys.ahk  shortcuts.ahk
algorithm/: .gitignore  algutils.c  algutils.h  compare.hpp
algorithm/coding/base64/: CMakeLists.txt  base64.c  base64.h  base64_c.py  base64_unittests.py
algorithm/coding/base64/tests/: CMakeLists.txt  base64_tests.c  base64_tests.cpp  dump.c  wchar_tests.c  wconv.c  wconv.h
algorithm/coding/base64/tools/: CMakeLists.txt  base64_cli.c
algorithm/containers/circular_buffer_unittest/: CMakeLists.txt  circular_buffer_unittest.cpp
algorithm/containers/dynamic_array_test/: CMakeLists.txt  CMakeSettings.json  dynamic_array_test.c
algorithm/dsp/FindPeaks/: .gitignore  CMakeLists.txt  FindPeaks.cpp  FindPeaks.h  FindPeaksHelper.cs  PyFindPeaks.cpp  PyFindPeaksEx.py  PyFindPeaksImpl.cpp  PyFindPeaksTest.py  PyFindPeaksUnitTest.py
algorithm/dsp/FindPeaks/FindPeaksTest/: CMakeLists.txt  FindPeaksTest.cpp  data.txt  data2.txt  data3.txt
algorithm/dsp/FindPeaks/Lib/: CMakeLists.txt
algorithm/math/floating_point_compare_test/: CMakeLists.txt  floating_point_compare_test.c
algorithm/misc/byteswap_benchmark/: CMakeLists.txt  always_inline.h  build-x86-windows.bat  builtin_byteswap.h  byteswap_benchmark.cpp  otfcc_byteswap.h  psnip_byteswap.h  ya_byteswap.h
algorithm/misc/data_rate_unit_unittest/: CMakeLists.txt  data_rate_unit_unittest.cpp
algorithm/string/string_unittest/: CMakeLists.txt  string_unittest.cpp
c/: .gitignore  AD_unpacking_test.c  README.md  U1AFF.c  bin2hex.c  bin2hex.h  bitutils.h  bitutils_test.c  bytes_swap.h  bzero.h  clog.h  common.h  compare_chinese_chars.c  error.h  flushinp.c  flushinp.h  fmemopen.c  fmemopen.h  getprogname.c  getprogname.h  handle_sigint.c  handle_sigint_sigterm.c  high_timer.c  high_timer.h  illegal_time.c  pathconf.c  print_unsigned_char.c  signal_every_n_ms.c  stack.h  strdup.c  strdup.h  tchardef.h  ttoi.c  ttoi.h  variable_argument_list_macro_test.c  xassert.c  xassert.h
c#/: .gitignore
c/GCC_extensions/: CMakeLists.txt  build-mingw.bat  build.sh
c/OpenGL/SnapshotDemo/: CMakeLists.txt  SnapshotDemo.c  SnapshotDemo.cbp
c/TCP_IP/getnameinfo/: CMakeLists.txt  getnameinfo.c
c/TCP_IP/inet_pton_test/: CMakeLists.txt  inet_pton_test.c
c/TCP_IP/tcp_chatroom_select_serv/: CMakeLists.txt  start_select_server.c
c/TCP_IP/tcp_daytime/: CMakeLists.txt  tcp_daytime_client_ipv4.c  tcp_daytime_client_ipv6.c  tcp_daytime_server_ipv4.c
c/TCP_IP/tcp_echo_client/: CMakeLists.txt  start_client.c  tcp-echo-server.sh
c/TCP_IP/tcpbench/: CMakeLists.txt  start_client.c  start_server.c
c/TCP_IP/tcpclient/: CMakeLists.txt  start_client.c  tcpclient.c
c/TCP_IP/tcpsrv/: CMakeLists.txt  startsrv_posix.c  startsrv_win32.c  startsrv_win32_IOCP.c  tcpsrv.c
c/TCP_IP/udpbench/: CMakeLists.txt  start_udp_client.c  start_udp_server.c
c/TCP_IP/udpbroadcast/: CMakeLists.txt  udpbroadcaster.c  udplistener.c
c/Win32/LaunchSnippingTool/: CMakeLists.txt  LaunchSnippingTool.c  build-x64-windows.bat  build-x86-windows.bat
c/Win32/LoadLibraryDemo/: CMakeLists.txt  bar.c  bar.h  foo.c  foo.h  main.c
c/Win32/launch-msinfo32/: CMakeLists.txt  build-x64-windows.bat  build-x86-windows.bat  launch-msinfo32.c
c/Win32/print_argv/: CMakeLists.txt  call_print_argv.c  print_argv.c
c/ZeroMQ/ipc_test/: CMakeLists.txt  build-x64-windows.bat  ipc_test.c  ipc_test.sln  ipc_test.vcxproj  ipc_test.vcxproj.filters  vcpkg.json
c/ZeroMQ/zmqbench/: CMakeLists.txt  build-x64-windows-static.bat  build-x64-windows.bat  build-x86-windows-static.bat  build-x86-windows.bat  install-windows.bat  uninstall-windows.bat  zmqbench_client.c  zmqbench_server.c
c/fmemopen_test/: CMakeLists.txt  fmemopen_test.c
c/getprogname_unittest/: CMakeLists.txt  getprogname_unittest.cpp
c/libhydrogen/: CMakeLists.txt  init.c  rand.c
cpp/: .gitignore  Array.h  HighTimer.hpp  README.md  Stopwatch.cpp  Stopwatch.h  bitsutils.hpp  common.h  covariant.cpp  dividing_lines.h  flushinp.hpp  iterator_ex.hpp  join.hpp  path.h  read_stream.hpp  split.hpp  split_args.h  strutils.hpp  tree_node.hpp  variadic_macro.h
cpp/subprocess_output/: CMakeLists.txt  CMakeSettings.json  stdout_stderr_order.cpp  subprocess_output-boost.cpp  subprocess_output-popen.c  subprocess_output-tpl.cpp  subprocess_output-winapi-wrapper.cpp  subprocess_output-winapi.c  v1.cpp  v2.cpp
go/: HelloGo.go  README.md  awesome.md  cputs.go  fcivc.go  pctutil.go
matlab/: CIM_circles.m  ColorReplace.m  ECGViewer.m  LPF_demo.m  VDICOM.m  armadillo.md  data_calibration.m  export_data.m  fft_demo.m  fft_demo_v2.m  fwrite_test.m  primeFactors.cpp  read_data.m  square.c  square_impl.c  square_impl.h
notes/: AbstractionLayer.md  Amalgamation.md  CodeReview.md  DataExchangeFormats.md  DesignPattern.md  GUI.md  LanguageInteroperability.md  Layout.md  MQTT.md  ObjectStorage.md  SQL.md  SVG.md  ScientificComputing.md  Unicode.md  WebSocket.md  jargon.md  styleguides.md
python/: .gitignore  .pythonstartup  BOM.py  CSC465.py  CreateVirtualKeyCodesTable.py  FetchPythonTutorialsURLs.py  GridFS_test.py  MSDN_Virtual-Key Codes.txt  MoviesScreenshotsMgr.py  PatientInfoProvider.py  RCUtility.py  README.md  RegKey.py  RomanEx.py  SetPEVersion.py  SetPEVersion_setup.py  SetScaling.pyw  advancedcalculus.py  algs4lectures.py  argument_test.py  bin2txt.py  bin2txt_build_exe.bat  bin2txt_build_exe_cx_freeze.bat  bin2txt_build_exe_nuitka.bat  bin2txt_build_exe_py2exe.bat  bin2txt_build_exe_py2exe.py  bin2txt_build_exe_pyinstaller.bat  bin2txt_build_exe_pyinstaller_virtualenv.bat  bin2txt_build_pynsist_installer.cfg  bin2txt_gui.pyw  bshelper.py  btdload.py  closurebench.py  dat2dcm.py  dat2dcm_setup.py  dat2dcm_v2.py  dcm2dat.py  dcmstd.py  dcmutil.py  dcmutil_gui.pyw  (+57 more)
ruby/: SetPEVersion.rb  bmicalc.rb
tools/: 3D.md  ABF.md  AIDA64.md  ANTLR.md  API.md  ASM.md  Access.md  AccessibilityInsights.md  Android.md  Ansible.md  AutoIt.md  Automation.md  Azure.md  Basic.md  CI_CD.md  CMS.md  (+311 more)
(+4800 files in other folders)
